CAY-2352 Clean up build scripts and code to support Java 8    use java.util.Base64 for base64 encoding/decoding